kyanite-core/snapshots/kyanite__ast__tests__calls.snap
---
source: kyanite-core/src/ast/mod.rs
expression: ast
---
file:
  nodes:
    - FuncDecl:
        name:
          kind: Identifier
          lexeme: foo
          span:
            line: 1
            column: 6
            length: 3
        params:
          - name:
              kind: Identifier
              lexeme: bar
              span:
                line: 1
                column: 10
                length: 3
            ty:
              kind: Type
              lexeme: int
              span:
                line: 1
                column: 15
                length: 3
        ty:
          kind: Type
          lexeme: int
          span:
            line: 1
            column: 21
            length: 3
        body:
          - Return:
              expr:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: bar
                    span:
                      line: 2
                      column: 11
                      length: 3
              keyword:
                kind: Return
                lexeme: ~
                span:
                  line: 2
                  column: 4
                  length: 6
        external: false
    - FuncDecl:
        name:
          kind: Identifier
          lexeme: bar
          span:
            line: 5
            column: 6
            length: 3
        params: []
        ty:
          kind: Type
          lexeme: float
          span:
            line: 5
            column: 13
            length: 5
        body:
          - Return:
              expr:
                Float:
                  - 42
                  - kind: Literal
                    lexeme: "42."
                    span:
                      line: 6
                      column: 11
                      length: 3
              keyword:
                kind: Return
                lexeme: ~
                span:
                  line: 6
                  column: 4
                  length: 6
        external: false
    - FuncDecl:
        name:
          kind: Identifier
          lexeme: helloWorld
          span:
            line: 9
            column: 6
            length: 10
        params: []
        ty: ~
        body:
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: println
                    span:
                      line: 10
                      column: 4
                      length: 7
              args:
                - Str:
                    - "\"Hello world!\""
                    - kind: Literal
                      lexeme: "\"Hello world!\""
                      span:
                        line: 10
                        column: 12
                        length: 14
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 10
                    column: 11
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 10
                    column: 26
                    length: 1
              delimiters: []
        external: false
    - FuncDecl:
        name:
          kind: Identifier
          lexeme: main
          span:
            line: 13
            column: 6
            length: 4
        params: []
        ty: ~
        body:
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: helloWorld
                    span:
                      line: 14
                      column: 4
                      length: 10
              args: []
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 14
                    column: 14
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 14
                    column: 15
                    length: 1
              delimiters: []
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: println
                    span:
                      line: 15
                      column: 4
                      length: 7
              args:
                - Call:
                    left:
                      Ident:
                        name:
                          kind: Identifier
                          lexeme: foo
                          span:
                            line: 15
                            column: 12
                            length: 3
                    args:
                      - Int:
                          - 72
                          - kind: Literal
                            lexeme: "72"
                            span:
                              line: 15
                              column: 16
                              length: 2
                    parens:
                      - kind: LeftParen
                        lexeme: ~
                        span:
                          line: 15
                          column: 15
                          length: 1
                      - kind: RightParen
                        lexeme: ~
                        span:
                          line: 15
                          column: 18
                          length: 1
                    delimiters: []
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 15
                    column: 11
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 15
                    column: 19
                    length: 1
              delimiters: []
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: println
                    span:
                      line: 16
                      column: 4
                      length: 7
              args:
                - Call:
                    left:
                      Ident:
                        name:
                          kind: Identifier
                          lexeme: bar
                          span:
                            line: 16
                            column: 12
                            length: 3
                    args: []
                    parens:
                      - kind: LeftParen
                        lexeme: ~
                        span:
                          line: 16
                          column: 15
                          length: 1
                      - kind: RightParen
                        lexeme: ~
                        span:
                          line: 16
                          column: 16
                          length: 1
                    delimiters: []
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 16
                    column: 11
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 16
                    column: 17
                    length: 1
              delimiters: []
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: println
                    span:
                      line: 17
                      column: 4
                      length: 7
              args:
                - Call:
                    left:
                      Ident:
                        name:
                          kind: Identifier
                          lexeme: max
                          span:
                            line: 17
                            column: 12
                            length: 3
                    args:
                      - Int:
                          - 10
                          - kind: Literal
                            lexeme: "10"
                            span:
                              line: 17
                              column: 16
                              length: 2
                      - Int:
                          - 300
                          - kind: Literal
                            lexeme: "300"
                            span:
                              line: 17
                              column: 20
                              length: 3
                    parens:
                      - kind: LeftParen
                        lexeme: ~
                        span:
                          line: 17
                          column: 15
                          length: 1
                      - kind: RightParen
                        lexeme: ~
                        span:
                          line: 17
                          column: 23
                          length: 1
                    delimiters:
                      - kind: Comma
                        lexeme: ~
                        span:
                          line: 17
                          column: 18
                          length: 1
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 17
                    column: 11
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 17
                    column: 24
                    length: 1
              delimiters: []
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: println
                    span:
                      line: 18
                      column: 4
                      length: 7
              args:
                - Call:
                    left:
                      Ident:
                        name:
                          kind: Identifier
                          lexeme: min
                          span:
                            line: 18
                            column: 12
                            length: 3
                    args:
                      - Float:
                          - 10
                          - kind: Literal
                            lexeme: "10."
                            span:
                              line: 18
                              column: 16
                              length: 3
                      - Float:
                          - 300
                          - kind: Literal
                            lexeme: "300."
                            span:
                              line: 18
                              column: 21
                              length: 4
                    parens:
                      - kind: LeftParen
                        lexeme: ~
                        span:
                          line: 18
                          column: 15
                          length: 1
                      - kind: RightParen
                        lexeme: ~
                        span:
                          line: 18
                          column: 25
                          length: 1
                    delimiters:
                      - kind: Comma
                        lexeme: ~
                        span:
                          line: 18
                          column: 19
                          length: 1
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 18
                    column: 11
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 18
                    column: 26
                    length: 1
              delimiters: []
        external: false

