kyanite-core/snapshots/kyanite__ast__tests__empty.snap
---
source: kyanite-core/src/ast/mod.rs
expression: ast
---
nodes:
  - Function:
      name:
        kind: Identifier
        lexeme: foo
        span:
          line: 1
          column: 6
          length: 3
      params: []
      ty:
        kind: Type
        lexeme: void
        span:
          line: 1
          column: 13
          length: 4
      body: []
      external: false

