kyanite-core/snapshots/kyanite__ast__tests__expr.snap
---
source: kyanite-core/src/ast/mod.rs
expression: ast
---
file:
  nodes:
    - FuncDecl:
        name:
          kind: Identifier
          lexeme: main
          span:
            line: 1
            column: 6
            length: 4
        params: []
        ty: ~
        body:
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: println
                    span:
                      line: 2
                      column: 5
                      length: 7
              args:
                - Binary:
                    left:
                      Binary:
                        left:
                          Binary:
                            left:
                              Float:
                                - 5
                                - kind: Literal
                                  lexeme: "5."
                                  span:
                                    line: 2
                                    column: 13
                                    length: 2
                            op:
                              kind: Star
                              lexeme: ~
                              span:
                                line: 2
                                column: 16
                                length: 1
                            right:
                              Float:
                                - 100
                                - kind: Literal
                                  lexeme: "100."
                                  span:
                                    line: 2
                                    column: 18
                                    length: 4
                        op:
                          kind: Plus
                          lexeme: ~
                          span:
                            line: 2
                            column: 23
                            length: 1
                        right:
                          Float:
                            - 15
                            - kind: Literal
                              lexeme: "15."
                              span:
                                line: 2
                                column: 25
                                length: 3
                    op:
                      kind: Minus
                      lexeme: ~
                      span:
                        line: 2
                        column: 29
                        length: 1
                    right:
                      Binary:
                        left:
                          Float:
                            - 7
                            - kind: Literal
                              lexeme: "7."
                              span:
                                line: 2
                                column: 31
                                length: 2
                        op:
                          kind: Slash
                          lexeme: ~
                          span:
                            line: 2
                            column: 34
                            length: 1
                        right:
                          Float:
                            - 8
                            - kind: Literal
                              lexeme: "8."
                              span:
                                line: 2
                                column: 36
                                length: 2
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 2
                    column: 12
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 2
                    column: 38
                    length: 1
              delimiters: []
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: println
                    span:
                      line: 3
                      column: 5
                      length: 7
              args:
                - Binary:
                    left:
                      Binary:
                        left:
                          Binary:
                            left:
                              Binary:
                                left:
                                  Int:
                                    - 5
                                    - kind: Literal
                                      lexeme: "5"
                                      span:
                                        line: 3
                                        column: 13
                                        length: 1
                                op:
                                  kind: Star
                                  lexeme: ~
                                  span:
                                    line: 3
                                    column: 15
                                    length: 1
                                right:
                                  Int:
                                    - 100
                                    - kind: Literal
                                      lexeme: "100"
                                      span:
                                        line: 3
                                        column: 17
                                        length: 3
                            op:
                              kind: Plus
                              lexeme: ~
                              span:
                                line: 3
                                column: 21
                                length: 1
                            right:
                              Int:
                                - 15
                                - kind: Literal
                                  lexeme: "15"
                                  span:
                                    line: 3
                                    column: 23
                                    length: 2
                        op:
                          kind: Minus
                          lexeme: ~
                          span:
                            line: 3
                            column: 26
                            length: 1
                        right:
                          Binary:
                            left:
                              Int:
                                - 7
                                - kind: Literal
                                  lexeme: "7"
                                  span:
                                    line: 3
                                    column: 28
                                    length: 1
                            op:
                              kind: Slash
                              lexeme: ~
                              span:
                                line: 3
                                column: 30
                                length: 1
                            right:
                              Int:
                                - 8
                                - kind: Literal
                                  lexeme: "8"
                                  span:
                                    line: 3
                                    column: 32
                                    length: 1
                    op:
                      kind: GreaterEqual
                      lexeme: ~
                      span:
                        line: 3
                        column: 35
                        length: 2
                    right:
                      Int:
                        - 7
                        - kind: Literal
                          lexeme: "7"
                          span:
                            line: 3
                            column: 37
                            length: 1
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 3
                    column: 12
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 3
                    column: 38
                    length: 1
              delimiters: []

