kyanite-core/snapshots/kyanite__ast__tests__hello_world.snap
---
source: kyanite-core/src/ast/mod.rs
expression: ast
---
nodes:
  - Function:
      name:
        kind: Identifier
        lexeme: main
        span:
          line: 1
          column: 6
          length: 4
      params: []
      ty: ~
      body:
        - Expr:
            Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: println
                    span:
                      line: 2
                      column: 4
                      length: 7
              args:
                - Str:
                    - "\"Hello, world!\""
                    - kind: Literal
                      lexeme: "\"Hello, world!\""
                      span:
                        line: 2
                        column: 12
                        length: 15
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 2
                    column: 11
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 2
                    column: 27
                    length: 1
              delimiters: []
      external: false

