kyanite-core/snapshots/kyanite__ast__tests__mixed.snap
---
source: kyanite-core/src/ast/mod.rs
expression: ast
---
file:
  nodes:
    - ConstantDecl:
        name:
          kind: Identifier
          lexeme: FOO
          span:
            line: 1
            column: 7
            length: 3
        ty:
          kind: Type
          lexeme: float
          span:
            line: 1
            column: 12
            length: 5
        expr:
          Float:
            - 5
            - kind: Literal
              lexeme: "5."
              span:
                line: 1
                column: 20
                length: 2
    - FuncDecl:
        name:
          kind: Identifier
          lexeme: mulByTwo
          span:
            line: 3
            column: 6
            length: 8
        params:
          - name:
              kind: Identifier
              lexeme: lhs
              span:
                line: 3
                column: 15
                length: 3
            ty:
              kind: Type
              lexeme: float
              span:
                line: 3
                column: 20
                length: 5
          - name:
              kind: Identifier
              lexeme: rhs
              span:
                line: 3
                column: 27
                length: 3
            ty:
              kind: Type
              lexeme: int
              span:
                line: 3
                column: 32
                length: 3
        ty:
          kind: Type
          lexeme: float
          span:
            line: 3
            column: 38
            length: 5
        body:
          - VarDecl:
              name:
                kind: Identifier
                lexeme: rhs
                span:
                  line: 4
                  column: 9
                  length: 3
              ty:
                kind: Type
                lexeme: float
                span:
                  line: 4
                  column: 14
                  length: 5
              expr:
                Float:
                  - 8
                  - kind: Literal
                    lexeme: "8."
                    span:
                      line: 4
                      column: 22
                      length: 2
          - Return:
              expr:
                Binary:
                  left:
                    Binary:
                      left:
                        Ident:
                          name:
                            kind: Identifier
                            lexeme: lhs
                            span:
                              line: 5
                              column: 12
                              length: 3
                      op:
                        kind: Star
                        lexeme: ~
                        span:
                          line: 5
                          column: 16
                          length: 1
                      right:
                        Ident:
                          name:
                            kind: Identifier
                            lexeme: rhs
                            span:
                              line: 5
                              column: 18
                              length: 3
                  op:
                    kind: Plus
                    lexeme: ~
                    span:
                      line: 5
                      column: 22
                      length: 1
                  right:
                    Ident:
                      name:
                        kind: Identifier
                        lexeme: FOO
                        span:
                          line: 5
                          column: 24
                          length: 3
              keyword:
                kind: Return
                lexeme: ~
                span:
                  line: 5
                  column: 5
                  length: 6
        external: false
    - FuncDecl:
        name:
          kind: Identifier
          lexeme: main
          span:
            line: 8
            column: 6
            length: 4
        params: []
        ty: ~
        body:
          - VarDecl:
              name:
                kind: Identifier
                lexeme: a
                span:
                  line: 9
                  column: 9
                  length: 1
              ty:
                kind: Type
                lexeme: float
                span:
                  line: 9
                  column: 12
                  length: 5
              expr:
                Float:
                  - 5
                  - kind: Literal
                    lexeme: "5."
                    span:
                      line: 9
                      column: 20
                      length: 2
          - VarDecl:
              name:
                kind: Identifier
                lexeme: b
                span:
                  line: 10
                  column: 9
                  length: 1
              ty:
                kind: Type
                lexeme: int
                span:
                  line: 10
                  column: 12
                  length: 3
              expr:
                Int:
                  - 7
                  - kind: Literal
                    lexeme: "7"
                    span:
                      line: 10
                      column: 18
                      length: 1
          - Call:
              left:
                Ident:
                  name:
                    kind: Identifier
                    lexeme: mulByTwo
                    span:
                      line: 11
                      column: 5
                      length: 8
              args:
                - Ident:
                    name:
                      kind: Identifier
                      lexeme: a
                      span:
                        line: 11
                        column: 14
                        length: 1
                - Ident:
                    name:
                      kind: Identifier
                      lexeme: b
                      span:
                        line: 11
                        column: 17
                        length: 1
              parens:
                - kind: LeftParen
                  lexeme: ~
                  span:
                    line: 11
                    column: 13
                    length: 1
                - kind: RightParen
                  lexeme: ~
                  span:
                    line: 11
                    column: 18
                    length: 1
              delimiters:
                - kind: Comma
                  lexeme: ~
                  span:
                    line: 11
                    column: 15
                    length: 1
        external: false

